[lf] Fix LookupForm alignment between labels and buttons; remove ui-kludge from body.

--- a/to.etc.domui/src/main/resources/resources/themes/scss/winter/_lookupform.scss
+++ b/to.etc.domui/src/main/resources/resources/themes/scss/winter/_lookupform.scss
@@ -3,6 +3,15 @@
 	padding-bottom: 10px;
 }
 
+table.ui-lf-st, table.ui-lf-st > tbody > tr {
+	padding: 0;
+	margin: 0;
+}
+
+table.ui-lf-st {
+	border-spacing: 0;
+}
+
 /*** Button bar ***/
 div.ui-lf-ebb {
 	margin-top: 8px;
